Lab/k8s_with_contrail/lab_exercise.old/lab1/lab1_pod1.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod1
spec:
  volumes:
  - name: nfs1
    nfs:
      server: 172.16.11.14
      path: /media/nfsshare/webserver
  containers:
  - name: client1
    image: 172.16.14.10:5000/webserver:0.1
    imagePullPolicy: IfNotPresent 
  - name: server1
    image: 172.16.14.10:5000/webserver:0.1
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: nfs1
      mountPath: /workingdir
