Lab/k8s_with_contrail/lab_exercise.old/lab1/lab1_ingress.yaml
---
#simple backend services
apiVersion: networking.k8s.io/v1
#apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress2
spec:
  defaultBackend:
    service:
      name: service-web-2
      port: 
        number: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: service-web-2
spec:
  ports:
  - port: 8888
    targetPort: 80
  selector:
    app: webserver2
---
#rc-webserver-do.yaml 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver2
  labels:
    app: webserver2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver2
  template:
    metadata:
      name: webserver2
      labels:
        app: webserver2
    spec:
      containers: 
      - name: webserver2
        image: 172.16.14.10:5000/webserver:0.1
        securityContext:
           privileged: true
        ports: 
        - containerPort: 80
